agregado de Js e img ej

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ViceARG</title>
+    <link rel="shortcut icon" href="./img/logo-pestaña.ico" type="image/x-icon">
 
     <!--icons-->
     <link
@@ -21,7 +22,7 @@
     <nav class="navbar">
       <div class="navbar-center">
         <span class="nav-icon">
-          <i class="fas fa-bars"></i>
+          <img class='logo_nav' src="./img/logo_nav.ico" alt="imagen_logo">
         </span>
         <h1>ViceARG</h1>
         <div class="cart-btn">
@@ -48,55 +49,10 @@
       </div>
       <div class="card-prod">
         <!-- Productos -->
-        <article class="prod">
-          <div class="img-contenedor">
-            <img
-              src="./img/fondo-index.png"
-              alt="Producto"
-              class="prod-img"
-            />
-            <button class="bag-btn" data-id="1">
-              <i class="fas fa-shopping-cart"></i>
-              Agregar a carrito
-            </button>
-          </div>
-          <h3>Teclado</h3>
-          <h4>$5000</h4>
-        </article>
-        <article class="prod">
-          <div class="img-contenedor">
-            <img
-              src="./img/fondo-index.png"
-              alt="Producto"
-              class="prod-img"
-            />
-            <button class="bag-btn" data-id="1">
-              <i class="fas fa-shopping-cart"></i>
-              Agregar a carrito
-            </button>
-          </div>
-          <h3>Teclado</h3>
-          <h4>$5000</h4>
-        </article>
-        <article class="prod">
-          <div class="img-contenedor">
-            <img
-              src="./img/fondo-index.png"
-              alt="Producto"
-              class="prod-img"
-            />
-            <button class="bag-btn" data-id="1">
-              <i class="fas fa-shopping-cart"></i>
-              Agregar a carrito
-            </button>
-          </div>
-          <h3>Teclado</h3>
-          <h4>$5000</h4>
-        </article>
-        <!-- fin productos -->
       </div>
     </section>
 
+    <!-- Sección carrito -->
     <section class="bloque-carrito">
       <div class="carrito">
         <span class="fin-carrito">
@@ -225,5 +181,7 @@
 
     <!-- <script src="https://unpkg.com/boxicons@latest/dist/boxicons.js"></script>
     <script src="./js/scripts.js"></script> -->
+
+    <script src="./js/script.js" type="module"></script>
   </body>
 </html>
