--- a/index.html
+++ b/index.html
@@ -38,14 +38,14 @@
     <header class="inicio">
       <div class="banner">
         <h2 class="banner-title">ViceARG</h2>
-        <button class="banner-btn">Comprar</button>
+        <button class="banner-btn"><a href="#listaProductos">Comprar</a></button>
       </div>
     </header>
 
     <!-- Seccion Productos -->
     <section class="productos">
       <div class="titulo-prod">
-        <h2>Productos</h2>
+        <h2 id="listaProductos">Productos</h2>
       </div>
       <div class="card-prod">
         <!-- Productos -->
@@ -60,25 +60,10 @@
         </span>
         <h2>Tu Carrito</h2>
         <div class="contenido-carrito">
-          <div class="carrito-item">
-            <img
-              src="./img/fondo-index.png"
-              alt="prod"
-            />
-            <div>
-              <h4>Teclado</h4>
-              <h5>$5000</h5>
-              <span class="remove-item">Remove</span>
-            </div>
-            <div>
-              <i class="fas fa-chevron-up"></i>
-              <p class="cant-item">1</p>
-              <i class="fas fa-chevron-down"></i>
-            </div>
-          </div>
+          <!-- Detalle carrito -->
         </div>
         <div class="carrito-footer">
-          <h3>El total es: s <span class="total-carrito">0</span></h3>
+          <h3>Precio final: $<span class="total-carrito">0</span></h3>
           <button class="limpiar-carro banner-btn">Vaciar Carrito</button>
         </div>
       </div>
@@ -100,87 +85,7 @@
       </div>
     </section> -->
 
-    <!--Productos-->
-    <!-- <section class="productos">
-      <div class="productos__center"> -->
-    <!-- <div class="producto">
-          <div class="image__container">
-            <img src="https://cdn4.chrono24.com/images/topmodels/2875-7wlcl6ogfoc0qxg22ox6up9m-Original.png?auto=compress&amp;h=305" alt="">
-          </div>
-          <div class="producto__footer">
-            <h1>Rejoles Originales</h1>
-            <div class="rating">
-              <span>
-                <i class="bx bxs-star"></i>
-              </span>
-              <span>
-                <i class="bx bxs-star"></i>
-              </span>
-              <span>
-                <i class="bx bxs-star"></i>
-              </span>
-              <span>
-                <i class="bx bxs-star"></i>
-              </span>
-              <span>
-                <i class="bx bx-star"></i>
-              </span>
-            </div>
-            <div class="price">$102.00</div>
-          </div>
-          <div class="bottom">
-            <div class="btn__group">
-              <a href="#" class="btn addToCart">Añadir carrito</a>
-              <a href="producto-detalles.html" class="btn view">Vista</a>
-            </div>
-          </div>
-        </div> -->
-    <!-- </div>
-    </section> -->
-
-    <!--Carrito-->
-    <!-- 
-    <section class="carrito__overlay">
-      <div class="carrito">
-        <span class="close__carrito">
-          <i class="bx bx-x"></i>
-        </span>
-        <h1>Su Carrito</h1>
-
-        <div class="carrito__center"> -->
-    <!-- <div class="carrito__item">
-            <img src="https://cdn4.chrono24.com/images/topmodels/2875-7wlcl6ogfoc0qxg22ox6up9m-Original.png?auto=compress&amp;h=305" alt="reloj">
-            <div>
-              <h3>Relojes Originales </h3>
-              <p class="price">$122</p>
-            </div>
-            <div>
-              <span>
-                <i class="bx bxs-up-arrow"></i>
-              </span>
-              <p>1</p>
-              <span>
-                <i class="bx bxs-down-arrow"></i>
-              </span>
-            </div>
-            <div>
-              <span class="remove__item">
-                <i class="bx bx-trash"></i>
-              </span>
-            </div>
-            
-          </div> -->
-    <!-- </div>
-
-        <div class="carrito__footer">
-          <h3>Total: $ <span class="carrito__total">0</span></h3>
-          <button class="clear__carrito btn">remover carrito</button>
-        </div>
-      </div>
-    </section> -->
-
-    <!-- <script src="https://unpkg.com/boxicons@latest/dist/boxicons.js"></script>
-    <script src="./js/scripts.js"></script> -->
+    
 
     <script src="./js/script.js" type="module"></script>
   </body>
