--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           <!-- Detalle carrito -->
         </div>
         <div class="carrito-footer">
-          <h3>Precio final: $<span class="total-carrito">0</span></h3>
+          <h3>Total: $<span class="total-carrito">0</span></h3>
           <button class="limpiar-carro banner-btn">Vaciar Carrito</button>
         </div>
       </div>
@@ -86,7 +86,9 @@
     </section> -->
 
     
-
-    <script src="./js/script.js" type="module"></script>
+<footer>
+  <p>Creado por &copy Gonzalo Bazzani</p>
+</footer>
+    <script src="./js/carrito.js" type="module"></script>
   </body>
 </html>
