--- a/index.html
+++ b/index.html
@@ -52,6 +52,22 @@
       </div>
     </section>
 
+    <!--Filtro-->
+    <section class="filter">
+      <div class="grid">
+        <div class="category">
+          <select id="category">
+            <option value="">Mostrar todo</option>
+            <option value="Teclado">Teclado</option>
+            <option value="Mouse">Mouse</option>
+            <option value="Auriculares">Auriculares</option>
+            <option value="Monitor">Monitor</option>
+            <option value="Notebook">Notebook</option>
+          </select>
+        </div>
+      </div>
+    </section>
+
     <!-- Sección carrito -->
     <section class="bloque-carrito">
       <div class="carrito">
@@ -69,21 +85,7 @@
       </div>
     </section>
 
-    <!--Filtro-->
-    <!-- <section class="filter">
-      <div class="grid">
-        <div class="category">
-          <select id="category" onclick="categoryValue()">
-            <option value="">Categorías</option>
-            <option value="Teclado">Teclado</option>
-            <option value="Mouse">Mouse</option>
-            <option value="Auriculares">Auriculares</option>
-            <option value="Monitor">Monitor</option>
-            <option value="Notebook">Notebook</option>
-          </select>
-        </div>
-      </div>
-    </section> -->
+    
 
     
 <footer>
