--- a/index.html
+++ b/index.html
@@ -81,16 +81,18 @@
         <div class="carrito-footer">
           <h3>Total: $<span class="total-carrito">0</span></h3>
           <button class="limpiar-carro banner-btn">Vaciar Carrito</button>
+          <button class="btn-pago banner-btn oculto"><a href="./pago.html">Finalizar compra</a></button>
         </div>
       </div>
     </section>
 
-    
+    <!-- Footer -->
+    <footer>
+      <p>Creado por &copy Gonzalo Bazzani</p>
+    </footer>
 
-    
-<footer>
-  <p>Creado por &copy Gonzalo Bazzani</p>
-</footer>
-    <script src="./js/carrito.js" type="module"></script>
+    <!-- JS -->
+    <script src="./js/script.js" type="module"></script>
+ 
   </body>
 </html>
