--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     <!-- JS -->
     <script src="./js/script.js" type="module"></script>
     <!-- Scroll up -->
-    <script src="../js/scrollUp.js"></script>
+    <script src="./js/scrollUp.js"></script>
   </body>
 </html>
 
