--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
       referrerpolicy="no-referrer"
     />
 
-    <!-- <link rel="stylesheet" href="./css/estilos.css" /> -->
+    <!-- Toastify -->
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
+
+    <!-- CSS -->
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
@@ -25,7 +28,7 @@
         <span class="nav-icon">
           <img class='logo_nav' src="./img/logo_nav.ico" alt="imagen_logo">
         </span>
-        <h1>ViceARG</h1>
+        <h1>Vice<span class="bandera">A</span>R<span class="bandera">G</span></h1>
         <div class="cart-btn">
           <span class="nav-icon">
             <i class="fas fa-shopping-cart"></i>
@@ -38,7 +41,7 @@
     <!-- Inicio -->
     <header class="inicio">
       <div class="banner">
-        <h2 class="banner-title">ViceARG</h2>
+        <h2 class="banner-title">Bienvenidos</h2>
         <button class="banner-btn"><a href="#listaProductos">Comprar</a></button>
       </div>
     </header>
@@ -74,7 +77,7 @@
         <span class="fin-carrito">
           <i class="fas fa-window-close"></i>
         </span>
-        <h2>Tu Carrito</h2>
+        <h2>Tu carrito</h2>
         <div class="contenido-carrito">
           <!-- Detalle carrito -->
         </div>
@@ -100,6 +103,8 @@
     <script src="./js/script.js" type="module"></script>
     <!-- Scroll up -->
     <script src="../js/scrollUp.js"></script>
+    <!-- Toastify -->
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
   </body>
 </html>
 
