API, estilos e img

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ViceARG</title>
-    <link rel="shortcut icon" href="./img/logo-pestaña.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="./img/ico/logo-pestaña.ico" type="image/x-icon">
 
     <!--icons-->
     <link
@@ -26,7 +26,7 @@
     <nav class="navbar">
       <div class="navbar-center">
         <span class="nav-icon">
-          <img class='logo_nav' src="./img/logo_nav.ico" alt="imagen_logo">
+          <img class='logo_nav' src="./img/ico/logo_nav.ico" alt="imagen_logo">
         </span>
         <h1>Vice<span class="bandera">A</span>R<span class="bandera">G</span></h1>
         <div class="cart-btn">
