--- a/pago.html
+++ b/pago.html
@@ -56,12 +56,13 @@
 
       <section class="footer-detalle">
         <div class="seguirComprando">
-          <button class="btn-detalle footer-btn">
+          <button class="btn-detalle">
             <a href="./index.html" class="contCompra">Seguir comprando</a>
           </button>
+          <button class="btn-detalle btn-finCompra"> Terminar compra </button>
         </div>
 
-        <div class="medioPago">
+        <div class="medioPago invisible">
           <div class="tipoPago">
             <div>
               <input type="radio" name="tipoPago" id="ef"/>
@@ -111,7 +112,7 @@
     </footer>
     
     <!-- JS -->
-    <script src="./js/pago.js" type="module"></script>
+    <script src="./js/script.js" type="module"></script>
     <!-- SweetAlert2 -->
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   </body>
