--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
         <div class="contenido-carrito">
           <!-- Detalle carrito -->
         </div>
+        <p class="carrito-vacio oculto">Carrito vacío</p>
         <div class="carrito-footer">
           <h3>Total: $<span class="total-carrito">0</span></h3>
           <button class="limpiar-carro footer-btn">Vaciar Carrito</button>
