--- a/index.html
+++ b/index.html
@@ -4,20 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ViceARG</title>
-    <link rel="shortcut icon" href="./img/ico/logo-pestaña.ico" type="image/x-icon">
-
+    <link rel="shortcut icon" href="./img/ico/logo-pestaña.ico" type="image/x-icon"/>
     <!--icons-->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
-      integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
     <!-- Toastify -->
-    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
-
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css"/>
     <!-- CSS -->
     <link rel="stylesheet" href="./css/style.css" />
   </head>
@@ -26,9 +17,13 @@
     <nav class="navbar">
       <div class="navbar-center">
         <span class="nav-icon">
-          <img class='logo_nav' src="./img/ico/logo_nav.ico" alt="imagen_logo">
+
         </span>
-        <h1>Vice<span class="bandera">A</span>R<span class="bandera">G</span></h1>
+        <a href="./index.html">
+          <h1>
+            Vice<span class="bandera">A</span>R<span class="bandera">G</span>
+          </h1>
+        </a>
         <div class="cart-btn">
           <span class="nav-icon">
             <i class="fas fa-shopping-cart"></i>
@@ -42,7 +37,9 @@
     <header class="inicio">
       <div class="banner">
         <h2 class="banner-title">Bienvenidos</h2>
-        <button class="banner-btn"><a href="#listaProductos">Comprar</a></button>
+        <button class="banner-btn">
+          <a href="#listaProductos">Comprar</a>
+        </button>
       </div>
     </header>
 
@@ -69,8 +66,6 @@
       </div>
     </section>
 
-    
-
     <!-- Sección carrito -->
     <section class="bloque-carrito">
       <div class="carrito">
@@ -85,7 +80,9 @@
         <div class="carrito-footer">
           <h3>Total: $<span class="total-carrito">0</span></h3>
           <button class="limpiar-carro footer-btn">Vaciar Carrito</button>
-          <button class="btn-pago footer-btn oculto"><a href="./pago.html">Finalizar compra</a></button>
+          <button class="btn-pago footer-btn oculto">
+            <a href="./pago.html">Finalizar compra</a>
+          </button>
         </div>
       </div>
     </section>
@@ -94,7 +91,6 @@
       <i class="fas fa-chevron-circle-up"></i>
     </div>
 
-
     <!-- Footer -->
     <footer>
       <p>Creado por &copy Gonzalo Bazzani</p>
@@ -102,11 +98,11 @@
 
     <!-- JS -->
     <script src="./js/script.js" type="module"></script>
-    <!-- Scroll up -->
-    <script src="../js/scrollUp.js"></script>
+    <script src="./js/extras.js"></script>
     <!-- Toastify -->
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+    <script
+      type="text/javascript"
+      src="https://cdn.jsdelivr.net/npm/toastify-js"
+    ></script>
   </body>
 </html>
-
-
