--- a/pago.html
+++ b/pago.html
@@ -14,8 +14,9 @@
     <!--Menú navegación-->
     <nav class="navbar">
       <div class="navbar-center">
-        <span class="nav-icon">
-
+        <span class="reloj-icon">
+          <p class="fecha"></p>
+          <p class="reloj"></p>
         </span>
         <a href="./index.html">
           <h1>
@@ -102,6 +103,10 @@
       </section>
     </div>
 
+    <div class="up">
+      <i class="fas fa-chevron-circle-up"></i>
+    </div>
+    
     <!-- Footer -->
     <footer>
       <p>Creado por &copy Gonzalo Bazzani</p>
@@ -109,7 +114,7 @@
 
     <!-- JS -->
     <script src="./js/script.js" type="module"></script>
-    <script src="./js/extras.js"></script>
+    <script src="./js/extras.js" type="module"></script>
     <!-- SweetAlert2 -->
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   </body>
