--- a/index.html
+++ b/index.html
@@ -53,12 +53,8 @@
       <section class="filter">
         <div class="category">
           <select id="category">
-            <option value="">Mostrar todo</option>
-            <option value="Teclado">Teclado</option>
-            <option value="Mouse">Mouse</option>
-            <option value="Auricular">Auriculares</option>
-            <option value="Monitor">Monitor</option>
-            <option value="Notebook">Notebook</option>
+           <option>Mostrar todo</option>
+            <!-- Filtro de productos por categorías-->
           </select>
         </div>
       </section>
@@ -81,7 +77,7 @@
         <div class="carrito-footer">
           <h3>Total: $<span class="total-carrito">0</span></h3>
           <button class="limpiar-carro footer-btn">Vaciar Carrito</button>
-          <button class="btn-pago footer-btn oculto">
+          <button class="btn-pago footer-btn">
             <a href="./pago.html">Finalizar compra</a>
           </button>
         </div>
