--- a/pago.html
+++ b/pago.html
@@ -35,11 +35,8 @@
       <!-- Detalle de la compra -->
       <section class="detalle">
         <div class="titulo-detalle">
-          <h3>####</h3>
+          <h3>Producto</h3>
           <h3>Cantidad</h3>
-          <h3>Categoría</h3>
-          <h3>Marca</h3>
-          <h3>Modelo</h3>
           <h3>Precio</h3>
         </div>
         <div class="detalleCompra">
